feat(app): firebase rules edited

--- a/scripts/firebase-setup.json
+++ b/scripts/firebase-setup.json
@@ -39,6 +39,10 @@
     "leaderboard": {
       ".read": true,
       ".write": false
+    },
+    "poolValueHistory": {
+      ".read": true,
+      ".write": false
     }
   }
 }
