fix(app): edited nad reslved vault mismatch

--- a/scripts/firebase-setup.json
+++ b/scripts/firebase-setup.json
@@ -43,6 +43,10 @@
     "poolValueHistory": {
       ".read": true,
       ".write": false
+    },
+    "vaults": {
+      ".read": true,
+      ".write": false
     }
   }
 }
