feat(app): added

--- a/scripts/firebase-setup.json
+++ b/scripts/firebase-setup.json
@@ -47,6 +47,10 @@
     "vaults": {
       ".read": true,
       ".write": false
+    },
+    "allVaults": {
+      ".read": true,
+      ".write": false
     }
   }
 }
