feat(app): updated schema

--- a/scripts/firebase-setup.json
+++ b/scripts/firebase-setup.json
@@ -52,5 +52,9 @@
       ".read": true,
       ".write": false
     }
+  },
+  "interest_submissions": {
+    ".read": true,
+    ".write": true
   }
 }
